tests/return/at_top_level.rz
return 0 // error: can't return from top level code